{
    "name": "InputMaster",
    "maps": [
        {
            "name": "InGame",
            "id": "4efde11d-dc19-4a5f-ba33-249f2a32a2e5",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "87e5dde4-6c0e-4570-9d9e-62eb9756f2f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Bomb",
                    "type": "Button",
                    "id": "4e5209ea-c957-4664-9553-861dc6109791",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Bow",
                    "type": "Button",
                    "id": "aa3dbd3a-9a7d-4812-8e32-dfb871d21081",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Portal",
                    "type": "Button",
                    "id": "73f56bf0-340f-480b-91f0-b8f91de7eeb9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu (IN)",
                    "type": "Button",
                    "id": "7fee873b-705b-4f37-866f-af7b02a7c56e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu (OUT)",
                    "type": "Button",
                    "id": "a6bc438c-1193-4ce4-8512-f576ded73fe9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Validate",
                    "type": "Button",
                    "id": "aa644a51-274f-486a-a67c-819818eb31a4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "198da101-03cb-40ff-8df8-a2789b878f9c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Bomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4097a8e-58a4-432f-bcb1-7835ac5fe29b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Bomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33402bcb-6f73-4cf4-8ea9-b50e21aeef35",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Bow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1335549a-f284-478e-a51a-fad68966eb3c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Portal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6b8bdb7-4573-4167-9c65-b3a6602cb3f8",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Portal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard ARROWS",
                    "id": "c2bc1099-6fc5-4694-8697-99258d47f380",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7c9fc0ba-7936-43b0-b7ae-053b7aecb989",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "182a3fe2-82e0-4247-b4a3-bfe03ca13b68",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "db0140ef-b6d5-43a4-b962-9996f8b03b04",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "01f565a1-b5a1-4ee9-bbe9-90b15283fc67",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard ZQSD",
                    "id": "6434032f-3182-46d4-ad3e-74700e6f1570",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "80348f84-2968-4437-8eaf-4386df1c090a",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ed43dcd3-4e0f-4b1d-b6fb-320e9e1abb75",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "47e89fa2-1e2b-46a3-a1f2-95a1a05400d9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "adffb861-c546-4ed0-9107-4bf8336ff323",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard WASD",
                    "id": "f382fb8c-81f9-4e10-b9a0-324d66187110",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ad22be73-75b2-4c81-97a4-ffee034cd076",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "35ff0c23-0372-4ddd-a942-dc9b1e5e76a1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f8051784-6c8a-423f-960c-a927a6cfaa3e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7b425cb9-3e5e-442d-a26f-633247049c71",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad - Left Stick",
                    "id": "eba754b7-7aa5-4c06-b5e0-6bae9fe68424",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6baa2c44-3ac7-46e1-98cc-06bb57f2309e",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7e13d5e8-69bf-44e8-851f-3087ea7c1661",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ce79323a-3833-4715-abb9-21962b4b88d3",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "79cd1c1d-3445-4355-94f4-fda9789c79a3",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad - D-Pad",
                    "id": "d4b9ef54-ffd1-4d4a-897f-8cf4baca8255",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "be946907-08cb-4893-b401-1ba543e688af",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b3b836f1-e7c5-44c0-91c5-9c3977f8817e",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "db5a6d28-223d-41b3-8ad1-e3ca90a77112",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1a072cbc-56b0-4827-a42a-70dcd7b36940",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7a48f05c-5d22-43b8-aba6-a640bfcf5a3b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Bow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f46ddac8-2b65-47ff-b2e0-03ef535e6908",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Menu (IN)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58cac6d7-cc85-4fef-8e52-54f6405e2572",
                    "path": "<Gamepad>/start",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Menu (IN)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caaaa2c2-e3a0-40a3-b3d6-8b40719f3994",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Validate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9237b30-ee4c-4686-b021-651eb0984d13",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Validate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11c1ca61-cc7c-4797-9ee4-3fb3de5450d8",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Menu (OUT)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a4d6b30-d976-4485-894f-8707af56d6f9",
                    "path": "<Gamepad>/select",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Menu (OUT)",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}